# parallel-poly-scheduler

./: .gitignore  .gitmodules  README.md  course.cpp  course.hpp  parse_json.cpp  student.cpp  student.hpp  students.cpp  students.hpp
catalog-scraper/: .gitignore  README.md  scraper.py  students.py
scheduler/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
scheduler/data/: cs_major_courses.json  cs_students.json
scheduler/src/: ParseJson.cpp  class_time.cpp  class_time.hpp  course.cpp  course.hpp  generate_students.cpp  generate_students.hpp  main.cpp  mpi_types.cpp  mpi_types.hpp  node.cpp  node.hpp  parse_json.cpp  parse_json.hpp  schedule.cpp  schedule.hpp  section.cpp  section.hpp  setup.cpp  setup.hpp  student.cpp  student.hpp  test_ParseJson.cpp
scheduler/test/: generate_students.cpp  parse_json.cpp  random_schedules.cpp  test_generate_students.cpp  test_student.cpp  test_students.cpp
